--- a/package.json
+++ b/package.json
@@ -3,25 +3,101 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "__NextJS__": "-----------------------------------------------------------",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "pristine:cache": "rm -rf ./.next/cache",
+    "__Storybooks__": "-------------------------------------------------------",
+    "story": "start-storybook -p 6006",
+    "storybook": "yarn story",
+    "build-story": "build-storybook",
+    "__Cypress__": "----------------------------------------------------------",
+    "cy": "cypress open",
+    "cy:run": "cypress run",
+    "cy:components": "cypress open-ct",
+    "cy:story": "cypress open-ct",
+    "cy:story_temp": "cypress open-ct --config-file ./cypress.storybook.json",
+    "cypress": "yarn cy",
+    "cypress:headless": "cypress run",
+    "e2e": "start-server-and-test start http://localhost:3001 cypress",
+    "e2e:headless": "start-server-and-test start http://localhost:3001 cypress:headless",
+    "__ESLint__": "-----------------------------------------------------------",
+    "lint-docs": "eslint -f unix \"src/**/*.{ts,tsx}\"",
+    "__Submodules__": "-------------------------------------------------------",
     "submodule:dependencies": "yarn "
   },
   "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "shared": "./src/components/shared/package"
+    "@mui/base": "^5.0.0-alpha.56",
+    "@mui/icons-material": "^5.0.5",
+    "@mui/material": "^5.0.6",
+    "@mui/styles": "^5.0.2",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "animate.css": "^4.1.1",
+    "axios": "^0.27.2",
+    "classnames": "^2.3.1",
+    "csstype": "^3.0.11",
+    "formik": "^2.2.9",
+    "keen-slider": "^6.6.3",
+    "next": "12.2.3",
+    "prop-types": "^15.7.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.2.0",
+    "react-toastify": "^8.0.3",
+    "tailwindcss": "^2.2.17",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.5",
-    "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
+    "@babel/core": "^7.16.5",
+    "@cypress/react": "^5.11.0",
+    "@cypress/webpack-dev-server": "^1.8.0",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.4.7",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/addon-measure": "^6.4.7",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addon-storysource": "^6.4.7",
+    "@storybook/react": "^6.3.12",
+    "@storybook/testing-react": "^1.2.2",
+    "@types/enzyme": "^3.10.10",
+    "@types/faker": "^5.5.9",
+    "@types/jest": "^28.1.6",
+    "@types/node": "18.6.2",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
+    "@types/tailwindcss": "^2.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "autoprefixer": "^10.3.7",
+    "babel-loader": "^8.2.3",
+    "cypress": "^10.3.1",
+    "enzyme": "^3.11.0",
+    "eslint": "8.20.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-config-next": "12.2.3",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-tsdoc": "^0.2.14",
+    "faker": "^5.5.3",
+    "jest": "^28.1.3",
+    "postcss": "^8.4.14",
+    "precss": "^4.0.0",
+    "prettier": "^2.4.1",
+    "redux-devtools-extension": "^2.13.9",
+    "sass": "^1.43.4",
     "storybook": "^6.5.9",
-    "typescript": "4.7.2"
+    "storybook-addon-material-ui": "^0.9.0-alpha.24",
+    "storybook-addon-outline": "^1.4.2",
+    "storybook-formik": "^2.2.0",
+    "stylelint": "^14.1.0",
+    "stylelint-config-recommended": "^7.0.0",
+    "typedoc": "^0.23.9",
+    "typescript": "4.7.4"
   }
 }
