--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "submodule:dependencies": "yarn "
   },
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
     "@mui/base": "^5.0.0-alpha.56",
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
