--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "cSpell.words": [
         "devdependencies",
-        "subcomponents"
+        "Photoshop",
+        "subcomponents",
+        "Tabpik",
+        "Webstorm",
+        "Zeplin"
     ]
 }
