--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pristine:cache": "rm -rf ./.next/cache",
     "__Storybooks__": "-------------------------------------------------------",
     "story": "start-storybook -p 6006",
+    "story:static": "start-storybook -p 6006 -s ./public",
     "storybook": "yarn story",
     "build-story": "build-storybook",
     "__Cypress__": "----------------------------------------------------------",
@@ -43,6 +44,7 @@
     "formik": "^2.2.9",
     "keen-slider": "^6.6.3",
     "next": "12.2.3",
+    "next-transpile-modules": "^9.0.0",
     "prop-types": "^15.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -61,6 +63,8 @@
     "@storybook/addon-measure": "^6.4.7",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-storysource": "^6.4.7",
+    "@storybook/builder-webpack5": "^6.5.9",
+    "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.3.12",
     "@storybook/testing-react": "^1.2.2",
     "@types/enzyme": "^3.10.10",
@@ -85,6 +89,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-storybook": "^0.6.2",
     "eslint-plugin-tsdoc": "^0.2.14",
     "faker": "^5.5.3",
     "jest": "^28.1.3",
@@ -95,6 +100,7 @@
     "sass": "^1.54.0",
     "storybook": "^6.5.9",
     "storybook-addon-material-ui": "^0.9.0-alpha.24",
+    "storybook-addon-next": "^1.6.7",
     "storybook-addon-outline": "^1.4.2",
     "storybook-formik": "^2.2.0",
     "stylelint": "^14.1.0",
