--- a/package.json
+++ b/package.json
@@ -107,5 +107,8 @@
     "stylelint-config-recommended": "^7.0.0",
     "typedoc": "^0.23.9",
     "typescript": "4.7.4"
+  },
+  "resolutions": {
+    "webpack": "^5"
   }
 }
